objects/CMPL123QMS__Failure_Mode_Hazardous_Situation__c.object
<CustomObject>
    <description>The junction object for Failure Mode and Hazardous Situation</description>
    <fields>
        <fullName>CMPL123QMS__Failure_Mode_Description__c</fullName>
        <formula>CMPL123QMS__Failure_Mode__r.CMPL123QMS__Short_Description__c</formula>
        <label>Failure Mode Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Failure_Mode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Failure Mode</description>
        <label>Failure Mode</label>
        <referenceTo>CMPL123QMS__Failure_Mode__c</referenceTo>
        <relationshipLabel>Failure Mode-Hazardous Situations</relationshipLabel>
        <relationshipName>Failure_Mode_Hazardous_Situations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazardous_Situation_Description__c</fullName>
        <formula>CMPL123QMS__Hazardous_Situation__r.CMPL123QMS__Short_Description__c</formula>
        <label>Hazardous Situation Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazardous_Situation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Hazardous Situation</description>
        <label>Hazardous Situation</label>
        <referenceTo>CMPL123QMS__Hazardous_Situation__c</referenceTo>
        <relationshipLabel>Failure Mode-Hazardous Situations</relationshipLabel>
        <relationshipName>Failure_Mode_Hazardous_Situations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Failure Mode-Hazardous Situation</label>
    <nameField>
        <displayFormat>FMHS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failure Mode-Hazardous Situations</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Failure_Mode_Hazardous_Situation</fullName>
        <active>true</active>
        <label>Failure Mode-Hazardous Situation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>